--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      crossorigin
+      src="https://cdn.jsdelivr.net/npm/ccapture.js@1.1.0/build/CCapture.all.min.js"
+    ></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
